force-app/main/default/objects/Pricebook_Mapping__mdt/Pricebook_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps Country + Sales Channel to Pricebooks (standard &amp; sample), incl. multi-currency support</description>
    <label>Pricebook Mapping</label>
    <pluralLabel>Pricebook Mappings</pluralLabel>
</CustomObject>