force-app/main/default/objects/Pricebook_Mapping__mdt/fields/Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO__c</fullName>
    <inlineHelpText>ISO country code (CH, DE, FR, etc). Leave blank for global channels like Industry.</inlineHelpText>
    <label>Country ISO</label>
    <length>2</length>
    <type>Text</type>
</CustomField>