force-app/main/default/objects/Pricebook_Mapping__mdt/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <description>Currency for the main pricebook mapping (e.g., CHF, EUR, GBP).</description>
    <label>Currency ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>