force-app/main/default/objects/Pricebook_Mapping__mdt/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <inlineHelpText>Exact Pricebook2.Name for the standard assortment</inlineHelpText>
    <label>Pricebook Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>