force-app/main/default/objects/Pricebook_Mapping__mdt/fields/Sales_Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Code__c</fullName>
    <inlineHelpText>ERP / Salesforce channel code (e.g. SC10, SC20, SC60)</inlineHelpText>
    <label>Sales Channel Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>