force-app/main/default/objects/Pricebook_Mapping__mdt/fields/Sample_CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>Sample_CurrencyIsoCode__c</fullName>
    <description>Currency for the sample pricebook mapping (usually same as CurrencyIsoCode__c).</description>
    <label>Sample Currency ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>