force-app/main/default/objects/Pricebook_Mapping__mdt/fields/Sample_Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Sample_Pricebook_Name__c</fullName>
    <inlineHelpText>Exact Pricebook2.Name for sample assortment (used when UnitType__c = CU)</inlineHelpText>
    <label>Sample Pricebook Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>