force-app/main/default/objects/Pricebook_Mapping__mdt/fields/Supports_Multi_Currency__c.field-meta.xml
<CustomField>
    <fullName>Supports_Multi_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>TRUE for Industry/global channels</inlineHelpText>
    <label>Supports Multi Currency</label>
    <type>Checkbox</type>
</CustomField>